...
            "state" : "translated",
            "value" : "BLE_GATT"
          }
        }
      }
    },
    "Bluetooth" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bluetooth"
          }
...
            "state" : "translated",
            "value" : "いま読み取るコード"
          }
        }
      }
    },
    "カード番号" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Card number"
          }
...
            "state" : "translated",
            "value" : "カウントダウン"
          }
        }
      }
    },
    "カメラ" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Camera"
          }
...
            "state" : "translated",
            "value" : "失敗音"
          }
        }
      }
    },
    "履歴" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "History"
          }
...
            "state" : "translated",
            "value" : "照合作業を、\n記録して始める。"
          }
        }
      }
    },
    "照合履歴" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Match history"
          }
...
    },
    "言語" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Language"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "言語"
...
            "state" : "translated",
            "value" : "記録を開始する"
          }
        }
      }
    },
    "設定" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
...
            "state" : "translated",
            "value" : "部品番号"
          }
        }
      }
    },
    "納品番号" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delivery number"
          }
...
            "state" : "translated",
            "value" : "指示"
          }
        }
      }
    },
    "かんばん連番" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Kanban serial"
          }
...
